# minion-agentfd

./: .env.example  .gitignore  LICENSE  README.md  custom_azure_model.py  example.py  example_browser_use.py  example_data_journalism.py  example_deep_research.py  example_deep_research_html.py  example_deep_research_pdf.py  example_hit.py  example_reason.py  example_search_deepseek_prover.py  example_with_managed_agents.py  example_with_managed_agents1.py  original.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: design.mdc  memory_bank.mdc
docs/: deep_research.md
examples/: __init__.py  minion_with_smolagents_example.py
minion_agent/: __init__.py  agent.py  logging.py
minion_agent/config/: __init__.py  settings.py
minion_agent/frameworks/: browser_use.py  deep_research.py  deep_research_llms.py  deep_research_prompts.yaml  deep_research_types.py  google.py  langchain.py  minion.py  minion_agent.py  openai.py  smolagents.py  tinyagent.py
minion_agent/instructions/: __init__.py  imports.py
minion_agent/providers/: __init__.py  adapters.py
minion_agent/serving/: __init__.py  agent_card.py  agent_executor.py  server.py
minion_agent/tools/: __init__.py  adapters.py  base.py  browser_tool.py  decorators.py  generation.py  image_generation.py  mcp.py  user_interaction.py  web_browsing.py  wrappers.py
minion_agent/tools/mcp/frameworks/: __init__.py  agno.py  google.py  langchain.py  llama_index.py  openai.py  smolagents.py  tinyagent.py
minion_agent/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_basic_adapter.py  test_minion_provider_adapter.py  test_smolagents_integration.py  test_smolagents_tools.py  test_tool_functionality.py
